adding the new fille

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div class="card">
     <img src="app_icon.png" alt="App Icon" />
     <h1>Download the Latest APK</h1>
-    <a class="download-button" href="./app-release.apk" download>Download Now</a>
+    <a class="download-button" href="./app-debug.apk" download>Download Now</a>
     <div class="note">
       File: <strong>sand valley.apk</strong><br>
     </div>
